<resources>
    <string name="app_name">shift test</string>
    <string name="scheme">Scheme/Network</string>
    <string name="brand">Brand</string>
    <string name="number">Card number</string>
    <string name="length">LENGTH</string>
    <string name="Luhn">LUHN</string>
    <string name="type">Type</string>
    <string name="prepaid">Prepaid</string>
    <string name="country">Country</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="bank">Bank</string>

    <string name="search_text">Найти</string>
    <string name="input_bin_text">Введите BIN</string>

    <string name="errorInputMessage">Введите 8 цифр</string>
    <string name="errorHostException">Проверьте ваше подключение к интернету</string>
    <string name="errorHttpException">Kарта не найдена</string>
</resources>