<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/card">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/scheme"
            style="@style/primaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scheme"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/schemeText"
            style="@style/secondaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/scheme"
            app:layout_constraintTop_toBottomOf="@+id/scheme"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/brand"
            style="@style/primaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brand"
            app:layout_constraintBottom_toTopOf="@+id/cardNumber"
            app:layout_constraintStart_toStartOf="@+id/scheme"
            app:layout_constraintTop_toBottomOf="@+id/scheme" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/brandText"
            style="@style/secondaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/brand"
            app:layout_constraintTop_toBottomOf="@+id/brand" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/cardNumber"
            style="@style/primaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/scheme"
            app:layout_constraintTop_toBottomOf="@id/brand" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/length"
            style="@style/secondaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/length"
            app:layout_constraintStart_toStartOf="@+id/cardNumber"
            app:layout_constraintTop_toBottomOf="@+id/cardNumber" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lengthText"
            style="@style/secondaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/length"
            app:layout_constraintTop_toBottomOf="@+id/length"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/luhn"
            style="@style/secondaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/Luhn"
            app:layout_constraintStart_toEndOf="@+id/length"
            app:layout_constraintTop_toTopOf="@+id/length"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/luhnText"
            style="@style/secondaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/luhn"
            app:layout_constraintTop_toBottomOf="@+id/luhn" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/type"
            style="@style/primaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"
            app:layout_constraintEnd_toStartOf="@+id/bank"
            app:layout_constraintHorizontal_bias="0.3"
            app:layout_constraintStart_toEndOf="@+id/scheme"
            app:layout_constraintTop_toTopOf="@+id/scheme" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/typeText"
            style="@style/secondaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/type"
            app:layout_constraintTop_toBottomOf="@+id/type" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/prepaid"
            style="@style/primaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prepaid"
            app:layout_constraintStart_toStartOf="@+id/type"
            app:layout_constraintTop_toTopOf="@+id/brand" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/prepaidText"
            style="@style/secondaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/prepaid"
            app:layout_constraintTop_toBottomOf="@+id/prepaid" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/country"
            style="@style/primaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country"
            app:layout_constraintStart_toStartOf="@+id/prepaid"
            app:layout_constraintTop_toTopOf="@+id/cardNumber" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/countryText"
            style="@style/secondaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/country"
            app:layout_constraintTop_toBottomOf="@+id/country" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/coordinate"
            style="@style/secondaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/countryText"
            app:layout_constraintTop_toBottomOf="@id/countryText" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/bank"
            style="@style/primaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bank"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/scheme" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/bankName"
            style="@style/bankText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/bank"
            app:layout_constraintTop_toBottomOf="@+id/bank"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/bankCity"
            style="@style/bankText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/bank"
            app:layout_constraintTop_toBottomOf="@+id/bankName"
            app:layout_constraintBottom_toTopOf="@id/bankUrl"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/bankUrl"
            style="@style/bankText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/bank"
            app:layout_constraintTop_toBottomOf="@+id/bankCity"
            app:layout_constraintBottom_toTopOf="@id/bankTel"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/bankTel"
            style="@style/bankText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/bank"
            app:layout_constraintTop_toBottomOf="@+id/bankUrl"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>